Bug 500063. "ASSERTION: Already have an undisplayed context entry for aContent" while running leak tests. r=bzbarsky